Target IntelliJ 2026.1 (JBR 25), remove JreProvisioner, bump dependencies
IntelliJ 2026.1 ships with JBR 25 which supports FFM natively, eliminating the
need for the JreProvisioner infrastructure that downloaded a separate Temurin JRE.
The LSP/DAP servers now use IntelliJ's own JBR via JavaProcessCommandBuilder.

- Target IntelliJ 2026.1 (JBR 25), plugin bytecode Java 25, sinceBuild=261
- Delete JreProvisioner.kt (455 lines) and JreProvisionerTest.kt (182 lines)
- Delete redundant lsp-processes.md plan doc
- Use LSP4IJ's JavaProcessCommandBuilder for JBR java resolution
- Keep OSProcessStreamConnectionProvider for stderr capture in Language Servers panel
- Remove kotlinx-serialization from intellij-plugin (only used by JreProvisioner)
- Remove findLocalIntelliJ() OS path guessing, keep -PintellijLocalPath for explicit use
- Bump IntelliJ Platform Gradle Plugin 2.11.0 -> 2.13.1
- Bump Kotlin 2.3.10 -> 2.3.20, ktlint 14.0.1 -> 14.2.0, ktlint-engine 1.5.0 -> 1.8.0
- Bump tree-sitter-cli 0.26.5 -> 0.26.8, mockito 5.22.0 -> 5.23.0
- Update all documentation to reflect JBR 25, remove Foojay/provisioning references